@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-10-06T08:09:51Z",
-  "count_outdated" : 1825,
-  "uniques_outdated" : 565,
-  "count" : 1851,
+  "timestamp" : "2022-10-06T16:12:33Z",
+  "count_outdated" : 1827,
+  "uniques_outdated" : 566,
+  "count" : 1852,
   "uniques" : 579,
   "clones" : [
-    {
-      "timestamp": "2022-09-22T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-09-23T00:00:00Z",
       "count": 2,
