@@ -1,3 +1,11 @@
+2022-10-06T16:12:33Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3198741773
+* notice: last 14d: unq all: 4 25
+* notice: prev accum: outdated-unq outdated-all / unq all: 565 1825 / 579 1851
+* notice: next accum: outdated-unq outdated-all / unq all: 566 1827 / 579 1852
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2022-09-22] / []
+
 2022-10-06T08:09:51Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3195562900
 * notice: last 14d: unq all: 4 26
